--- a/style.css
+++ b/style.css
@@ -162,6 +162,10 @@ section{
     height: 40rem;
 }
 
+.picaju{
+    border-radius: 50%;
+}
+
 .sec_pic-container{
     display: flex;
     height: 400px;
@@ -253,7 +257,7 @@ section{
     gap: 1rem;
 }
 .detail-container img{
-    filter: grayscale(100%);
+    filter: grayscale(90%);
 }
 
 #about{
@@ -277,13 +281,17 @@ section{
 }
 
 .about-pic{
+    margin-top: 50px;
     display: flex;
+    height: 300px;
+    width: 300px;
     border-radius: 2rem;
+    filter: grayscale(100%);
 }
 
 .arrow{
     position: absolute;
-    right: 1rem;
+    right: -5rem;
     bottom: 2.5rem;
 }
 
@@ -313,7 +321,7 @@ section{
 
 /*certification*/
 
-#skills-certification{
+#certification{
     position: relative;
 }
 
@@ -378,4 +386,53 @@ article .icon{
 .project-btn{
     color: black;
     border-color: rgb(163,163,163);
+}
+
+/*contact*/
+
+#contact{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container{
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53,53,53) 0.1rem solid;
+    border-color: rgb(163,163,163);
+    background: rgb(250,250,250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+.contact-info-container{
+    font-size: larger;
+}
+
+.contact-icon{
+    cursor: default;
+}
+
+.email-icon{
+    height: 2.5rem ;
+}
+
+/*footer*/
+
+footer{
+    height: 26vh;
+    margin: 0 1rem;
+}
+footer p{
+    text-align: center;
 }
